# instashop-mcp

./: .env.example  .gitignore  pyproject.toml
src/instashop_mcp/: config.py
src/instashop_mcp/clients/: instagram_client.py  razorpay_client.py
src/instashop_mcp/tools/: comments.py
