[project]
name = "instashop-mcp"
version = "0.1.0"
description = "Instagram commerce automation via Model Context Protocol"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "razorpay>=1.4.2",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
instashop-mcp = "instashop_mcp.server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"